--- a/src/HeaderOption.css
+++ b/src/HeaderOption.css
@@ -6,11 +6,15 @@
 	color: gray;
 	cursor: pointer;
 }
-.headerOption__title{
-    font-size: 12px;
-    font-weight: 400;
+.headerOption__title {
+	font-size: 12px;
+	font-weight: 400;
 }
-.headerOption:hover{
-    color: black;
+.headerOption__icon {
+	object-fit: contain;
+	height: 25px !important;
+	width: 25px !important;
 }
-
+.headerOption:hover {
+	color: black;
+}
