--- a/src/Header.css
+++ b/src/Header.css
@@ -3,6 +3,7 @@
 	top: 0;
 	display: flex;
 	justify-content: space-evenly;
+	background-color: white;
 	border-bottom: 0.1px solid lightgrey;
 	padding-top: 10px;
 	padding-bottom: 10px;
