Integrated firebase to app

--- a/src/Post.css
+++ b/src/Post.css
@@ -18,6 +18,10 @@
 .post__body {
 	overflow-wrap: anywhere;
 }
-.post__info>h2{
-    font-size: 15px;
+.post__info > h2 {
+	font-size: 15px;
+}
+.post__buttons {
+	display: flex;
+	justify-content: space-evenly;
 }
